# isaac_simulation

./: .gitignore  .gitmodules  ActionGraph.usd  ActionGraph_01.usd  README.md  articulation_controller.usd  docker.sh  example_env.usd  frames_2025-07-17_22.35.20.gv  frames_2025-07-17_23.04.03.gv  limo_controller.usd  scout_v2_09_29.usb.usd
.github/workflows/: ci.yml  control_pkg.yml  navigation_pkg.yml
battery/: power_consumption_model.py
env/: battery.py  device.py
params/: battery_params.yaml  environment_information.yaml
scout_description/: scout_mini.urdf
scout_description/scout_mini/: ros2_scout.usd  scout_solo_working.usd  scout_solo_working_v2.usd  scoutandpiper.usd
scout_nav2_pkg/: CMakeLists.txt  package.xml
scout_nav2_pkg/include/scout_nav2_pkg/: device_pose.hpp  move_joints.hpp  wait_for_order.hpp
scout_nav2_pkg/launch/: bt.launch.py
scout_nav2_pkg/params/: cyclonedds.xml  map.pgm  map.yaml  map_parameters.yaml  nav2_params.yaml
scout_nav2_pkg/rviz/: nav.rviz
scout_nav2_pkg/src/: main.cpp
scout_nav2_pkg/src/nodes/: move_joints.cpp  navigate_to_pose.cpp  send_goal_pose.cpp
scout_nav2_pkg/trees/: tree_docked_charging.xml  tree_wireless_charging.xml
src/control_pkg/: package.xml  setup.py
src/control_pkg/control_pkg/: battery_level_subscriber.py  pose_array_subscriber.py
src/control_pkg/include/control_pkg/: build_device_table.py  device.py
src/scout_nav2_pkg/: CMakeLists.txt  frames_2025-07-09_16.44.53.gv  frames_2025-07-11_18.34.51.gv  frames_2025-07-11_18.36.52.gv  frames_2025-07-11_18.46.19.gv  package.xml
src/scout_nav2_pkg/include/scout_nav2_pkg/: navigate_to_pose.hpp  send_goal_pose.hpp  wait_for_order.hpp
src/scout_nav2_pkg/launch/: bt_launch.py
src/scout_nav2_pkg/params/: map.pgm  map.yaml  map_parameters.yaml  map_params.yaml  nav2_params.yaml
src/scout_nav2_pkg/src/: main.cpp
src/scout_nav2_pkg/src/nodes/: navigate_to_pose.cpp  wait_for_order.cpp
src/scout_nav2_pkg/trees/: tree_docked_charging.xml
