<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scout_nav2_pkg</name>
  <version>0.0.1</version>
  <description>Movement package for the Scout Mini V1 Robot in Isaac Sim.</description>
  <maintainer email="j.pedrogomes314@gmail.com">root</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- => Dependencies -->

  <!-- C++ BehaviorTree -->
  <depend>behaviortree_cpp_v3</depend>

  <!-- ROS2 core dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Actions -->
  <depend>nav2_msgs</depend>

  <!-- tf2 -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
